# studentsperformance

./: .gitignore  README.md  mlruns.dvc  pyproject.toml  requirements.txt
.dvc/: config
config/: params.yaml
data/: data.csv.dvc
src/artifacts/: processor.pkl
src/components/: data_ingestion.py  data_transformation.py  model_training.py
src/pipeline/: model_training.py
src/utills/: exception_handling.py  logger.py  utilities.py
