[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "student-performance"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "scipy"
]
requires-python = ">=3.9"
authors = [
    {name='Ravi Kumar', email='travikumar3456@gmail.com'}

]
maintainers = [
    { name='Ravi Kumar', email='travikumar3456@gmail.com'}
]
description = "To predict the Student Performance"
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.flit.module]
name = 'src'

[tool.ruff]
line-length = 99
src = ['src']
include = ["pyproject.toml",]

[tool.ruff.lint]
extend-select = ["I"]


[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[project.optional-dependencies]
dev = [
    "ruff"
]
